--- a/self-deal/package.json
+++ b/self-deal/package.json
@@ -25,6 +25,7 @@
     "lucide-react": "^0.544.0",
     "mongoose": "^8.18.1",
     "next": "15.5.3",
+    "node-tesseract-ocr": "^2.2.1",
     "otplib": "^12.0.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -33,7 +34,8 @@
     "recharts": "^3.2.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -42,6 +44,7 @@
     "@types/node": "^20.19.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/uuid": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
     "tailwindcss": "^4",
