--- a/self-deal/tsconfig.json
+++ b/self-deal/tsconfig.json
@@ -22,6 +22,12 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "components/PaymentPage.tsx"],
+  "include": [
+    "next-env.d.ts",
+    "global.d.ts",       
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+  ],
   "exclude": ["node_modules"]
 }
