--- a/bdris/package.json
+++ b/bdris/package.json
@@ -9,16 +9,24 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "axios": "^1.12.1",
+    "axios": "^1.13.2",
+    "canvas": "^3.2.0",
+    "html2canvas": "^1.4.1",
+    "jsbarcode": "^3.12.1",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.544.0",
+    "mongoose": "^8.19.3",
     "next": "15.5.3",
+    "qrcode": "^1.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/html2canvas": "^0.5.35",
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
