--- a/admin/package.json
+++ b/admin/package.json
@@ -10,17 +10,21 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "bcryptjs": "^3.0.3",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.548.0",
     "mongoose": "^8.19.2",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
-    "recharts": "^3.3.0"
+    "recharts": "^3.3.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
