--- a/bdris/package.json
+++ b/bdris/package.json
@@ -11,15 +11,18 @@
   "dependencies": {
     "axios": "^1.13.2",
     "canvas": "^3.2.0",
+    "cheerio": "^1.1.2",
     "html2canvas": "^1.4.1",
     "jsbarcode": "^3.12.1",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.544.0",
     "mongoose": "^8.19.3",
     "next": "15.5.3",
+    "puppeteer": "^24.29.1",
     "qrcode": "^1.5.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-hot-toast": "^2.6.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
