--- a/bdris/package.json
+++ b/bdris/package.json
@@ -9,25 +9,33 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.10.1",
     "axios": "^1.13.2",
+    "base32-encode": "^2.0.0",
+    "bcryptjs": "^3.0.3",
     "canvas": "^3.2.0",
     "cheerio": "^1.1.2",
     "html2canvas": "^1.4.1",
     "jsbarcode": "^3.12.1",
+    "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.544.0",
     "mongoose": "^8.19.3",
     "next": "15.5.3",
+    "otplib": "^12.0.1",
     "puppeteer": "^24.29.1",
     "qrcode": "^1.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-hot-toast": "^2.6.0"
+    "react-hot-toast": "^2.6.0",
+    "react-redux": "^9.2.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/html2canvas": "^0.5.35",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/qrcode": "^1.5.6",
     "@types/react": "^19",
